--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
